minor fixes. fixed layout issues for forms (issue #3).

--- a/star_watch/static/style.css
+++ b/star_watch/static/style.css
@@ -192,9 +192,21 @@
     z-index: 0;
     background:linear-gradient(160deg, #e94462 0%, #5900ff 100%);
 }
-
+.card-img-container {
+    width: 500px;
+    height: 300px;
+    grid-area: image;
+}
+.card-image {
+    width: 100%;
+    border-radius: 6px;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 1px 2px 4px black;
+}
 .toggleEdit {
     grid-area: image;
+    position: absolute;
     z-index: 1; 
     width: 0%;
     margin-left: 94%; 
@@ -215,18 +227,11 @@
     display:block;
 }
 
-.card-image {
-    width: 100%;
-    grid-area: image;
-    border-radius: 6px;
-    height: 100%;
-    object-fit: cover;
-    box-shadow: 1px 2px 4px black;
-}
-/* .tag {
-    padding: 5px;
+
+.tag {
+    margin-top: .3em;
     grid-area: tag;
-} */
+}
 .tag-name {
     padding: 1px 8px;
     display: inline-block;
@@ -302,7 +307,7 @@
 }
 /* https://www.youtube.com/watch?v=cwC1qdPWBKo */
 .card-item:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
     box-shadow: 5px 5px 15px rgb(47, 47, 47); 
 }
 .card-item:hover #upcount {
@@ -334,25 +339,26 @@
 
 .login-form {
     outline-style: solid;
-    display: table;
-    padding: 4em 6em 6em 5em;
-    margin: 0 auto;
+    display: flex;
+    padding: 3em 3em 4em 3em;
+    margin-left:auto;
+    margin-right: auto;
     background-color: #e3a6ff; 
     border-radius: 10px;
-    inline-size: 550px;
-    overflow-wrap: break-word;
+    max-width: 550px;
+    flex-direction: column;
 }
 
 .login-header {
     font-size: 30px;
     font-family: 'Poppins', sans-serif;
     text-align: center;
-    margin-top: -1em;
+    margin-top: 0em;
     margin-bottom: 1.5em;
 }
 
 #login-input {
-    margin-bottom: 3em;
+    margin-bottom: 1em;
     margin-top:1em;
     width: 100%;
     padding: 0.375rem 0.75rem;
@@ -368,24 +374,29 @@
 }
 
 #login-button {
-    display:block;
     padding: 0.375rem 0.75rem;
     margin-bottom:2em;
-    width: 30%;
-    background-color: #ffc1ef;
+    width: 25%;
+    background-color: #ff889d;
     border-radius: 0.5em;
-    
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    border:none;
+    display: block;
 }
 
 .signup-form {
     outline-style: solid;
-    display: table;
+    display: flex;
     padding: 3em 4em 2em 3em;
-    margin: 0 auto;
+    margin-top: -4em;
     background-color: #e3a6ff; 
     border-radius: 10px;
-    inline-size: 550px;
-    overflow-wrap: break-word;
+    max-width: 550px;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right:auto;
 }
 
 .signup-header {
@@ -405,26 +416,28 @@
 }
 
 #signup-input {
-    margin-bottom: 3em;
-    margin-top:1em;
+    margin-bottom: 1em;
     width: 100%;
-    padding: 0.375rem 0.75rem;
+    /* padding: 0.375rem 0.75rem; */
     display:block;
     border-radius: 0.5em;
 }
 #signup-button {
-    display:block;
     padding: 0.375rem 0.75rem;
     margin-bottom:2em;
-    width: 20%;
-    background-color: #ffc1ef;
+    width: 25%;
+    background-color: #ff889d;
     border-radius: 0.5em;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    border:none;
+    display: block;
 }
 #passwordHelpBlock {
-    font-size: 13px;
+    font-size: 11px;
     display:block;
-    margin-top: -2.5em;
-    margin-bottom: 2em;
+    margin-top: -1.1em;
     font-family: 'Poppins', sans-serif;
 }
 .account {
@@ -457,8 +470,7 @@
     margin: 0 auto;
     background-color: #e3a6ff; 
     border-radius: 10px;
-    inline-size: 800px;
-    overflow-wrap: break-word;
+    max-width: 800px;
 }
 #add-input {
     margin-bottom: 0em;
@@ -513,7 +525,8 @@
     margin-top: 1em;
     float:left;
     border:none;
-    display: block;
+    display: flex;
+    justify-content: center;
 }
 #mediaClose {
     float: right;
@@ -557,13 +570,19 @@ body.active > *:not(#addmediaForm) {
 }
 #accountForm {
     outline-style: solid;
-    display: table;
-    padding: 3em 4em 2em 3em;
+    display: block;
+    padding: 3em 4em 3em 3em;
     margin: 0 auto;
     background-color: #e3a6ff; 
     border-radius: 10px;
-    inline-size: 750px;
+    max-width: 800px;
     overflow-wrap: break-word;
+}
+#account-input {
+    margin-bottom: 3em;
+    width: 100%;
+    display: block;
+    border-radius: 0.5em;
 }
 /* account page => profile picture */
 .change_profile {
@@ -799,7 +818,7 @@ body.active > *:not(#addmediaForm) {
 #editTagButton:hover {
     transform: scale(.9);
 }
-#editTagsDiv {
+/* #editTagsDiv {
     outline-style: solid;
     display: table;
     padding: 3em 2em 2em 2em;
@@ -811,7 +830,7 @@ body.active > *:not(#addmediaForm) {
     float: right;
     margin-right: 2em;
     
-}
+} */
 
 #cancelTagButton {
     margin-top: 1em;
@@ -984,7 +1003,7 @@ body.active > *:not(#addmediaForm) {
     } 
   
 }
-@media screen and (max-width: 767px) and (min-width: 620px){
+/* @media screen and (max-width: 767px) and (min-width: 620px){
     .nav-ul.active {
         margin-top: 9em;
         z-index: 2;
@@ -1007,7 +1026,7 @@ body.active > *:not(#addmediaForm) {
         margin-left: 0em;
         margin-right: 1em;
     }   
-}
+} */
  @media screen and (max-width: 767px) and (min-width: 426px){
     .logged-out {
         display: flex;
@@ -1146,7 +1165,7 @@ body.active > *:not(#addmediaForm) {
     } */
 }
 
-@media screen and (width: 1920px) {
+/* @media screen and (width: 1920px) {
     .card-item { 
         margin: 1em 3em 1em 4em;
         grid-template-columns: 500px;
@@ -1232,7 +1251,7 @@ body.active > *:not(#addmediaForm) {
     }
     .nav {
         justify-content: center;
-    }
+    } */
     /* .search {
         margin-top: 7.2em;
     }
@@ -1248,7 +1267,7 @@ body.active > *:not(#addmediaForm) {
     .search {
         margin-left: 4em;
     } */
-    .nav-ul {
+    /* .nav-ul {
         margin-top: -1.5em;
         margin-left: 9em;
     }
@@ -1308,8 +1327,8 @@ body.active > *:not(#addmediaForm) {
     .card-item:hover #heart_filled {
         margin-left: 0em;
     }
-}
-@media screen and (max-width: 1039px) and (min-width: 950px) {
+} */
+/* @media screen and (max-width: 1039px) and (min-width: 950px) {
     .card-item { 
         margin: 1em 3em 1em 4em;
         grid-template-columns: 370px;
@@ -1344,7 +1363,7 @@ body.active > *:not(#addmediaForm) {
     .add-item {
         margin-left: 96%;
     }
-}
+} */
 
 /* @media screen and (max-width: 622px) and (min-width: 500px) {
     .search {
@@ -1354,7 +1373,7 @@ body.active > *:not(#addmediaForm) {
         margin-left: -35.4em;
     }
 } */
-@media screen and (max-width: 949px) and (min-width: 768px) {
+/* @media screen and (max-width: 949px) and (min-width: 768px) {
     .card-item { 
         margin: 1em 3em 1em 4em;
         grid-template-columns: 500px;
@@ -1382,7 +1401,7 @@ body.active > *:not(#addmediaForm) {
     .right-nav {
         gap: 7.5em !important;
     }
-}
+} */
 
 .plus_tag_button {
     background-color: transparent;
@@ -1590,25 +1609,15 @@ body.active > *:not(#addmediaForm) {
 }
 #editMedia {
     outline-style: solid;
-    display: grid;
-    /* grid-template-areas: 
-        "edit-title"
-        "edit-image"
-        "edit-update"
-        "edit-rating"
-        "edit-eps"
-        "edit-total"
-        "edit-desc"
-        "edit-btns"
-        "edit-tagTitle"
-        "edit-tags"; */
-    grid-template-columns: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     padding: 3em 4em 2em 3em;
     background-color: #e3a6ff; 
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 800px;
+    max-width: 800px;
 }
 
 #tagUl {
@@ -1668,4 +1677,19 @@ body.active > *:not(#addmediaForm) {
 .hand_wave {
     height: 25px;
     width: 25px;
+}
+.edit-img {
+    object-fit: cover;
+    width:100%;
+    outline: solid 2px;
+    border-radius: 12px;;
+    
+}
+.editmediaimage {
+    width: 500px;
+    height: 350px;
+    margin-left:auto;
+    margin-right:auto;
+    display: flex;
+   
 }
